# face_registration_and_recognition_milvus

./: .gitignore  .pylintrc  README.md  cleanup.sh  pyproject.toml
.github/workflows/: main_test.yml
app_docker_compose/: .dockerignore  Dockerfile  docker-compose.yaml  docker-compose.yml  face-recog-elasticsearch-ldocker-compose.yml  face-recog-milvus-standalone-docker-compose.yml  milvus_reference.py  requirements.txt
app_docker_compose/app/: config.py  inference.py  server.py
app_docker_compose/app/api/: milvus.py  mysql.py
app_docker_compose/app/models/: __init__.py  logging.py  model.py
app_docker_compose/app/routes/: face.py  person.py  recognize_face.py  recognize_person.py  register_face.py  register_person.py
app_docker_compose/app/triton_server/: inference_trtserver.py  utils.py
app_docker_compose/app/utils/: common.py  image.py
app_docker_compose/scripts/: build_docker.sh  bulk_insert_faces_into_milvus.py  homomorphic_emb_face_search_knn.py  run_docker.sh  train_spoofed_face_vector_clsf.py
app_docker_compose/server/: Dockerfile  inference.py  server.py  utils.py
app_docker_compose/src/: .dockerignore  Dockerfile  requirements.txt  run_docker.sh
app_docker_compose/src/app/: inference.py  server.py
app_docker_compose/tests/: conftest.py  requirements.txt
face_reg_recog_milvus/: .env.example  Dockerfile  docker-compose.ci.yaml  docker-compose.yaml  requirements.txt
face_reg_recog_milvus/app/: config.py  inference.py  server.py
face_reg_recog_milvus/scripts/: bulk_insert_faces_into_milvus.py  homomorphic_emb_face_search_knn.py  poetry_to_pip_requirements.py  start_servers.sh  train_spoofed_face_vector_clsf.py
face_reg_recog_milvus/tests/: conftest.py  requirements.txt
(+44 files in other folders)
