[project]
name = "face-reg-recog-milvus"
version = "0.1.0"
description = "Register faces and recognize saved faces with docker, milvus, redis, and mariaDB"
authors = [{ name = "SamSamhuns", email = "samhunsadamant@gmail.com" }]
license = { text = "Apache 2.0" }
readme = "README.md"
requires-python = ">=3.11,<=3.14"

dependencies = [
    "aiofiles==24.1.0",
    "fastapi==0.116.1",
    "gdown==5.2.0",
    "opencv-python-headless==4.12.0.88",
    "pillow==12.1.1",
    "pymilvus==2.6.0",
    "PyMySQL==1.1.1",
    "python-multipart==0.0.22",
    "redis==6.4.0",
    "requests==2.32.5",
    "tritonclient[grpc]==2.57.0",
    "uvicorn==0.35.0",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
coverage = "^7.10.5"
httpx = "^0.28.1"
pytest = "^8.4.1"
pytest-asyncio = "^1.1.0"
pytest-cov = "^6.2.1"
pytest-order = "^1.3.0"
pytest-testmon = "^2.1.3"
pytest-timeout = "^2.4.0"
requirements-parser = "^0.13.0"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
ruff = "^0.12.8"

[tool.ruff]
line-length = 120
fix = true

[tool.ruff.lint]
select = [
    "F",   # pyflakes (undefined names, unused imports)
    "E",   # pycodestyle (errors)
    "W",   # pycodestyle (warnings)
    "I",   # isort (import sorting)
    "UP",  # pyupgrade (modernize syntax)
    "B",   # bugbear (common bugs)
    "C4",  # comprehensions (inefficient comprehensions)
    "SIM", # simplify (simplifiable conditions)
    "A",   # builtins (no shadowing)
    "T20", # no print statements
    "N",   # naming conventions
]
